username and password changes
still a bug

--- a/iOS/Kefi/Base.lproj/Main.storyboard
+++ b/iOS/Kefi/Base.lproj/Main.storyboard
@@ -1399,6 +1399,6 @@ Gal and Paul.</string>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="0yC-Fe-h4B"/>
+        <segue reference="pwR-ZL-Kqt"/>
     </inferredMetricsTieBreakers>
 </document>
